--- a/lib/generators/configatron_rails/install/templates/config.yml.erb
+++ b/lib/generators/configatron_rails/install/templates/config.yml.erb
@@ -1,6 +1,6 @@
 # This file was auto-generated.  Feel free to customize it to your whim.
 
-<% env.each do |e| -%>
+<% environments.each do |e| -%>
 <%= e %>:
     site_name: Test Site
     admin_email: admin@test.com
